--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     "swig": "^1.3.2",
     "time-grunt": "^0.3.1",
     "view-helpers": "^0.1.4",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-contrib-copy": "^0.5.0",
+    "factual": "^0.1.0",
+    "trueskill": "0.0.2"
   },
   "devDependencies": {
     "assetmanager": "^0.1.2",
