--- a/package.json
+++ b/package.json
@@ -1,35 +1,13 @@
 {
-  "name": "mean",
-  "description": "MEAN.io: A fullstack javascript platformed powerd by MongoDB, ExpressJS, AngularJS, NodeJS.",
+  "name": "pool-league",
+  "description": "pool league using trueskill",
   "version": "0.3.3",
   "private": false,
-  "author": "Linnovate <mean@linnovate.net>",
-  "contributors": [
-    {
-      "name": "Lior Kesos",
-      "mail": "lior@linnovate.net"
-    },
-    {
-      "name": "Yonatan Ellman",
-      "mail": "yonatan@linnovate.net"
-    },
-    {
-      "name": "Ehud Shahak",
-      "mail": "ehud@linnovate.net"
-    },
-    {
-      "name": "Amos Haviv",
-      "mail": "mail@amoshaviv"
-    },
-    {
-      "name": "Drew Fyock",
-      "mail": "drew@steelbisondev.com"
-    }
-  ],
+  "author": "Dustin Hilgaertner",
   "mean": "0.3.3",
   "repository": {
     "type": "git",
-    "url": "https://github.com/linnovate/mean.git"
+    "url": "https://github.com/dhilgaertner/pool-league.git"
   },
   "engines": {
     "node": "0.10.x",
